--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^7.1.2",
     "aws-amplify": "^2.2.2",
     "bulma": "^0.8.0",
+    "jquery": "^3.4.1",
     "konva": "^4.1.5",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
